Change row view, captured button event (doing nothing)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">DASM.ECP2</string>
     <string name="actionBarSearchName">SearchInterface</string>
     <string name="search_hint">Inserte texto aquí...</string>
+    <string name="save">Save</string>
 </resources>
