--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,11 @@
 <resources>
     <string name="app_name">DASM.ECP2</string>
     <string name="actionBarSearchName">SearchInterface</string>
-    <string name="search_hint">Inserte texto aquí...</string>
+    <string name="search_hint">Nombre del artista</string>
     <string name="save">Save</string>
+    <string name="album">Album: </string>
+    <string name="artist">Artist: </string>
+    <string name="song">Song: </string>
+    <string name="savedSongs">SAVED SONGS</string>
+    <string name="searchResult">TRACKS FOUND</string>
 </resources>
